<resources>
    <string name="app_name">Shout</string>
    <string name="message_input_prompt">Enter Message</string>
    <string name="message_line_separator">:</string>
    <string name="title_activity_login">Shout!</string>
    <string name="pref_file_key">com.shout.android.preferences</string>
    <string name="pref_file_key_show_notifications">com.shout.android.preferences.showNotifications</string>
    <string name="pref_file_key_message_sound">com.shout.android.preferences.messageSound</string>
    <string name="pref_file_vibrate">com.shout.android.preferences.vibrate</string>
    <string name="pref_file_username">com.shout.android.preferences.username</string>

    <!-- Strings on opening screen -->
    <string name="opening_text">Chat Anonymously With People Nearby</string>
    <string name="opening_bluetooth_text">Turn on Bluetooth</string>
    <string name="opening_start_button">Get Started</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Enter Name</string>
    <string name="action_username_input">Start Shouting</string>
    <string name="people_shouting_template">%1$d people shouting</string>
    <string name="person_shouting_template">1 person shouting</string>
    <string name="CHANNEL_ID">com.shout.android.notifications</string>
    <string name="channel_description">Shout Notifications</string>
    <string name="channel_name">Shout Notifications</string>

    <!-- Strings related to hamburger menu -->
    <string name="change_username">Change Username</string>
    <string name="notification">Notification</string>
    <string name="report_bugs">Report Bugs</string>
    <string name="about_shout">About Shout</string>

    <!-- Strings related to login2 -->
    <string name="prompt_username2">username</string>
    <string name="people_shouting_template2">%1$d</string>
    <string name="person_shouting_template2">1</string>
    <string name="person_shouting_template_nearby">People shouting nearby</string>
    <string name="chat_enter">Enter Chat</string>

    <!--Bug report strings -->
    <string name="bug_report_header">Report Bugs</string>
    <string name="bug_report_field">Please describe your problem: </string>
    <string name="bug_report_button">Send</string>

    <!--Strings related to notification settings -->
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_notification_page">Notifications</string>
    <string name="header_notification_page">Message Notifications</string>
    <string name="switch_show_notifications">Show Notifications</string>
    <string name="switch_sound">Message Sound</string>
    <string name="switch_vibrate">Vibrate</string>
    <string name="footer_notification_page">
        <u>Reset Notification Settings</u>
    </string>


</resources>
