<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context=".OpeningScreen">

    <!-- Opening Screen Content -->
    <TextView
        android:id="@+id/opening_text_intro"
        android:layout_marginBottom="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/opening_text"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <ImageView
        android:id="@+id/bluetooth_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/ic_bluetooth_logo"/>

    <TextView
        android:id="@+id/bluetooth_on_text"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/opening_bluetooth_text"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/opening_button"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_white"
        android:text="@string/opening_start_button"
        android:textAlignment="center"
        android:textColor="@color/colorBackground"
        android:textSize="20sp"/>
</LinearLayout>