<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="0dp"
            android:textAlignment="center"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/notificationBackBtn"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="32dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_chevron_left_black_36dp" />
                <TextView
                    android:id="@+id/settingsNotificationHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/title_notification_page"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorSettingsBackground">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/header_notification_page"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/showNotificationsSwitch"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:checked="true"
            android:text="@string/switch_show_notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Switch
            android:id="@+id/messageSoundSwitch"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/switch_sound"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/showNotificationsSwitch" />
        <Switch
            android:id="@+id/vibrateSwitch"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:text="@string/switch_vibrate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/messageSoundSwitch" />
        <TextView
            android:id="@+id/resetNotifications"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:text="@string/footer_notification_page"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/vibrateSwitch"
            app:layout_constraintTop_toBottomOf="@+id/vibrateSwitch" />
    </android.support.constraint.ConstraintLayout>
    <!-- android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" /-->
</android.support.design.widget.CoordinatorLayout>