<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:textAlignment="center"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/settingsNotificationHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/bug_report_header"
                android:textSize="18sp" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <Button
            android:id="@+id/button2"
            android:layout_width="147dp"
            android:layout_height="69dp"
            android:text="@string/bug_report_button"
            tools:layout_editor_absoluteX="119dp"
            tools:layout_editor_absoluteY="377dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="336dp"
            android:layout_height="44dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/bug_report_field"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="60dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="332dp"
            android:layout_height="229dp"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="118dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bug_report_input" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>